syntax = "proto3";

// https://grpc.io/docs/languages/go/quickstart/#regenerate-grpc-code
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
// protoc --go-grpc_out=. --go-grpc_opt=paths=source_relative  pb_stream.proto
// protoc --go_out=. --go_opt=paths=source_relative pb_stream.proto

option go_package = "hall.bojiu.com/internal/net/gstream/pb";

service ForwardMsg {
  //双向流模式，能推能拉
  rpc PPStream (stream StreamRequestData) returns (stream StreamResponseData);
}

message StreamRequestData {
  string clientId = 1; // 客户端id
  uint32  msg = 2 ;  // 消息编号
  bytes secret = 3 ; //
  bytes  serialNum = 4  ;
  bytes  data = 5; // 数据
}

message StreamResponseData {
  string clientId = 1; // 客户端id
  uint32 msg = 2 ;  // 消息编号
  bytes  data = 3; // 数据
}